--- a/DocumentLicenta/References.bib
+++ b/DocumentLicenta/References.bib
@@ -106,3 +106,13 @@ edition = {1st}
   day={25},
   URL = {https://aws.amazon.com/elasticloadbalancing/}
 }
+
+@book{adam2017,
+  author={ {Peng Qi} and  {Wei Zhou} and  {Jizhong Han}},
+  booktitle={2017 IEEE 2nd International Conference on Cloud Computing and Big Data Analysis (ICCCBDA)}, 
+  title={A method for stochastic L-BFGS optimization}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={156-160},}
+Copy
